# adolescent-bot

./: .env  README.md  keep_alive.py  main.py  pyproject.toml  requirements.txt  settings.txt  todo.md  util.py
insults/: animals.txt  jokeTemplates.txt  nouns.txt  verbs.txt  yourMom.txt
